--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 
-@tailwind base;
-@tailwind components;
+@import "tailwindcss/preflight";
 @tailwind utilities;
 
 @variant dark (&:where(.dark *));
